--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/HomeStyle.css">
     <title>Reagan Carolussen | Home</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
             <ul>
                 <li>
                     <a href="#Main">Home</a>
-                    <a href="#About">About</a>
+                    <a href="./about.html">About</a>
                 </li>
             </ul>
         </nav>
@@ -30,14 +30,21 @@
                 
             </div>
 
-            <div class="About">
+            <!-- <div class="About">
+
+                <h1><u>Skills</u></h1>
+
+                <div class="Images">
+                    <img src="" alt="">
+                </div>
+
                 Content
-            </div>
+            </div> -->
 
             <div class="Contact">
                 <div style="background-color: #25274D;"> Darker </div>
                 <div style="background-color: #464866;"> Dark </div>
-                <div style="background-color: #AAABB8;"> Normal </div>
+                <div style="background-color: #AAABB6;"> Normal </div>
                 <div style="background-color: #2E9CCA;"> Light </div>
                 <div style="background-color: #29648A;"> Lighter </div>
             </div>
