--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/AboutStyle.css">
+    <script src=""></script>
     <title>Reagan | About</title>
 </head>
 <body>
@@ -12,8 +13,9 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#Main">Home</a>
+                    <a href="./index.html">Home</a>
                     <a href="./about.html">About</a>
+                    <a href="./contact.html"> Contact</a>
                 </li>
             </ul>
         </nav>
@@ -21,24 +23,41 @@
     <main>
         <div class="AboutPage">
             <h1> About Me </h1>
-            <p>Lorem ipsum dolor sit amet,consectetur adipisicing elit. Maiores eveniet vitae laboriosam reiciendis maxime possimus perferendis eum! Iste animi et laborum, dignissimos neque quod qui in quia nisi non quisquam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt possimus molestiae laudantium. Molestias quo dolores nemo sunt, repellendus ex iusto et, nihil, ratione accusamus enim? Aspernatur placeat aliquid nulla officia.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sapiente minima animi odit dolorem maiores totam alias, nobis exercitationem quis quasi omnis nulla, ex aut? Quidem laborum earum aspernatur blanditiis!
-            </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iste sed alias laborum voluptatum? Minima unde architecto odio sequi eaque, animi repellendus asperiores molestias aut harum incidunt optio nulla amet.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas corrupti mollitia magnam labore ullam nisi blanditiis inventore laboriosam sint. Temporibus explicabo possimus et repellat vitae dolor consectetur tenetur earum eaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est deleniti, accusantium similique, ut excepturi ab, soluta omnis repellendus sequi doloribus maiores veritatis deserunt. Dolorum iure perferendis modi, nulla voluptas ullam!</p>
+            <p> My name is Reagan Carolussen, I am 19 years old and was born in Contansia Burg. I've always taken a liking to programming and computers and chose to pursue a career in that. I take initiative. Ever since highschool when I found my passion, I took coding extra curriculum activities and started learning python and in 2019 I was elected to be a prefect at my highschool. My leadership goals, my time-management and I believe Iam a multi-talented individual</p>
         </div>
 
         <div class="Skills">
             <h1>Skills</h1>
 
-            <h2>Video Game Deisgn</h2>
+            <h2>Video Game Design</h2>
             <div class="GameDesign">
-                <h3 class="GameDesignGridItem">Various Games I Have Made</h3>
-                <!-- <img id="BrickBreaker" src="./images/BrickBreaker/Game Screen.png" alt="BrickBreakerScreen">
-                <img src="./images/First Person Game/GameScreen.png" alt="FirstPersonGameScreen">
-                <img src="./images/Forest Run/InGameScreen.png" alt="ForestRunScreen"> -->
+                <p class="Item0">BrickBreakerExplanation</p>
+                <img class="GameDesignGridItem" src="./images/BrickBreaker/Game Screen.png" alt="BrickBreakerScreen">
+                <p class="Item0">FirstPersonExplanation</p>
+                <img  class="GameDesignGridItem" src="./images/First Person Game/GameScreen.png" alt="FirstPersonGameScreen">
+                <p class="Item0">ForestRunExplanation</p>
+                <img class="GameDesignGridItem" src="./images/Forest Run/InGameScreen.png" alt="ForestRunScreen">
             </div>
+        </div>
+
+        <h2> 3D Modeling </h2>
+        <div class="Modeling">
+            <img class="ModelingGridItem" src="./images/Voxel.png" alt="VoxelImage">
+            <p class="Item1">BrickBreakerExplanation</p>
+            <img  class="ModelingGridItem" src="./images/Burger Kart.png" alt="KartImage">
+            <p class="Item1">FirstPersonExplanation</p>
+            <img class="ModelingGridItem" src="./images/Weapon.png" alt="WeaponImage">
+            <p class="Item1">ForestRunExplanation</p>
+        </div>
+
+        <h2> Coding </h2>
+        <div class="Coding">
+            <p class="Item2">BrickBreakerExplanation</p>
+            <img class="CodingGridItem" src="./images/Voxel.png" alt="HTML Image">
+            <p class="Item2">FirstPersonExplanation</p>
+            <img  class="CodingGridItem" src="./images/Weapon.png" alt="CSS Image">
+            <p class="Item2">ForestRunExplanation</p>
+            <img class="CodingGridItem" src="./images/Weapon.png" alt="C# Image">
         </div>
 
     </main>
