--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/HomeStyle.css">
+    <link rel="stylesheet" href="./styles/AboutStyle.css">
     <title>Reagan Carolussen | Home</title>
 </head>
 <body>
@@ -12,8 +13,9 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#Main">Home</a>
-                    <a href="./about.html">About</a>
+                    <a id="Home" href="./index.html">Home</a>
+                    <a id="About" href="./about.html">About</a>
+                    <a id="Contact" href="./contact.html"> Contact</a>
                 </li>
             </ul>
         </nav>
@@ -29,18 +31,54 @@
                 </div>
                 
             </div>
+            
+        <div class="AboutPage">
+            <h1> About Me </h1>
+            <p> My name is Reagan Carolussen, I am 19 years old and was born in Contansia Burg. I've always taken a liking to programming and computers and chose to pursue a career in that. I take initiative. Ever since highschool when I found my passion, I took coding extra curriculum activities and started learning python and in 2019 I was elected to be a prefect at my highschool. My leadership goals, my time-management and I believe Iam a multi-talented individual</p>
+        </div>
 
-            <!-- <div class="About">
+        <h1 id="Skill">Skills</h1>
+            <div class="Skills">
 
-                <h1><u>Skills</u></h1>
+                <img class="SkillIcon" src="./images/html-5-icon.png" alt="HTML Icon">
+                <img class="SkillIcon" src="./images/css-3-icon.png" alt="CSS3 Icon">
+                <img class="SkillIcon" src="./images/c.png" alt="C# Icon">
+                <p class="SkillText"> This is a thing</p>
+                <p class="SkillText">This is a thing</p>
+                <p class="SkillText">This is a thing</p>
 
-                <div class="Images">
-                    <img src="" alt="">
-                </div>
+            </div>
 
-                Content
-            </div> -->
+            <h2>Video Game Design</h2>
+            <div class="GameDesign">
+                <p class="Item0">BrickBreakerExplanation</p>
+                <img class="GameDesignGridItem" src="./images/BrickBreaker/Game Screen.png" alt="BrickBreakerScreen">
+                <p class="Item0">FirstPersonExplanation</p>
+                <img  class="GameDesignGridItem" src="./images/First Person Game/GameScreen.png" alt="FirstPersonGameScreen">
+                <p class="Item0">ForestRunExplanation</p>
+                <img class="GameDesignGridItem" src="./images/Forest Run/InGameScreen.png" alt="ForestRunScreen">
+            </div>
+        </div>
 
+        <h2> 3D Modeling </h2>
+        <div class="Modeling">
+            <img class="ModelingGridItem" src="./images/Voxel.png" alt="VoxelImage">
+            <p class="Item1">BrickBreakerExplanation</p>
+            <img  class="ModelingGridItem" src="./images/Burger Kart.png" alt="KartImage">
+            <p class="Item1">FirstPersonExplanation</p>
+            <img class="ModelingGridItem" src="./images/Weapon.png" alt="WeaponImage">
+            <p class="Item1">ForestRunExplanation</p>
+        </div>
+
+        <h2> Coding </h2>
+        <div class="Coding">
+            <p class="Item2">BrickBreakerExplanation</p>
+            <img class="CodingGridItem" src="./images/Voxel.png" alt="HTML Image">
+            <p class="Item2">FirstPersonExplanation</p>
+            <img  class="CodingGridItem" src="./images/Weapon.png" alt="CSS Image">
+            <p class="Item2">ForestRunExplanation</p>
+            <img class="CodingGridItem" src="./images/Weapon.png" alt="C# Image">
+        </div>
             <div class="Contact">
                 <div style="background-color: #25274D;"> Darker </div>
                 <div style="background-color: #464866;"> Dark </div>
