--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,6 @@
         </nav>
     </header>
     <main>
-            <div class="Contact">
-                
             <div class="Form">
                 <div class="FormContent">
                     <form>
@@ -45,7 +43,7 @@
             </div>
 
                 </div>
-                <img id="ProfessionalImage" src="./images/ReaganCropped.jpg" alt="ProfessionalPhoto">
+                <img id="ProfessionalImage" src="./images/Reagan.jpg" alt="ProfessionalPhoto">
             </div>
     </main>
     <footer>
