--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <main>
         <div class="AboutPage">
             <h1> About Me </h1>
-            <p> My name is Reagan Carolussen, I am 19 years old and was born in Contansia Burg. I've always taken a liking to programming and computers and chose to pursue a career in that. I take initiative. Ever since highschool when I found my passion, I took coding extra curriculum activities and started learning python and in 2019 I was elected to be a prefect at my highschool. My leadership goals, my time-management and I believe Iam a multi-talented individual</p>
+            <p> My name is Reagan Carolussen, I am 19 years old and was born in Contansia Burg. I've always taken a liking to programming and computers and chose to pursue a career in that. I take initiative. Ever since highschool when I found my passion, I took coding extra curriculum activities and started learning python and in 2019 I was elected to be a prefect at my highschool. My leadership goals, my time-management allow me to  believe Iam a multi-talented individual</p>
         </div>
 
         <div class="Skills">
