--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
                     <a id="AboutID" href="#About">About</a>
                     <ul class="SubMenu">
                         <li>
-                            <a id="submenutext" href=""> About Me</a>
-                            <a id="submenutext" href="#"> About</a>
-                            <a id="submenutext" href="#"> Contact</a>
+                            <a id="submenutext" href="#About"> About-Me</a>
+                            <a id="submenutext" href="#Skills"> Skills</a>
+                            <a id="submenutext" href="./projects.html"> Projects</a>
                         </li>
                     </ul>
                 <li id="Dropdown3">
                     <a id="ContactID" href="">Contact</a>
                     <ul class="SubMenu">
                         <li>
-                            <p> Description </p>
-                            <p> Form</p>
+                            <a id="submenutext" href="#Testimonials"> Testimonials</a>
+                            <a id="submenutext" href="#Form" > Form</a>
                         </li>
                     </ul>
                 </li>
@@ -121,7 +121,7 @@
                     <h1 id="TestimonialHeading"> Testimonials </h1>
                     <div class="Testimonial">
                         <h1 class="TestimonialName" >Ikhlass Rahoot ~</h1>
-                        <p class="TestimonialText" > "This is a compliment"</p>
+                        <p class="TestimonialText" > "Testimonial"</p>
                         <h1 class="TestimonialName" >Monique Dampies ~</h1>
                         <p class="TestimonialText"> "This is a compliment"</p>
                         <h1 class="TestimonialName">Emile Van Wyk ~</h1>
