--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                         <h1 class="TestimonialName" >Ikhlass Rahoot ~</h1>
                         <p class="TestimonialText" > "Testimonial"</p>
                         <h1 class="TestimonialName" >Monique Dampies ~</h1>
-                        <p class="TestimonialText"> "This is a compliment"</p>
+                        <p class="TestimonialText"> "Testimonial"</p>
                         <h1 class="TestimonialName">Emile Van Wyk ~</h1>
-                        <p class="TestimonialText"> "This is a compliment"</p>
+                        <p class="TestimonialText"> "Testimonial"</p>
                     </div>
                 </div>
 
