--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <main>
 
         <div class="Projects">
-            <h1>My projects</h1>
+            <h1 id="HeadingStyle">My projects</h1>
         </div>
 
         <h2>Game Design</h2>
